feat: story slides

--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <title>Wanned</title>
   </head>
   <body>
+    <section id="story">
+      <p>
+        Il était une fois dans un Pays lointain, très lointain, une Principauté
+        appelée Quimbroisie.
+      </p>
+      <div id="progress-bar"></div>
+    </section>
     <canvas id="wanned"></canvas>
     <script src="/js/index.js" type="module"></script>
   </body>
