--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       <div id="progress-bar"></div>
     </section>
     <canvas id="wanned"></canvas>
+    <div id="fog"></div>
     <script src="/js/index.js" type="module"></script>
   </body>
 </html>
