--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
       <div id="progress-bar"></div>
     </section>
     <canvas id="wanned"></canvas>
-    <div id="fog"></div>
+    <div id="light" class="hidden"></div>
+    <div id="fog" class="hidden"></div>
     <script src="/js/index.js" type="module"></script>
   </body>
 </html>
