feat: add support for collisions

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/css/index.css" />
+    <link rel="stylesheet" href="css/index.css" />
     <title>Wanned</title>
   </head>
   <body>
@@ -17,6 +17,6 @@
     <canvas id="wanned"></canvas>
     <div id="light" class="hidden"></div>
     <div id="fog" class="hidden"></div>
-    <script src="/js/index.js" type="module"></script>
+    <script src="js/index.js" type="module"></script>
   </body>
 </html>
