feat: transition on key info text

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </div>
       </div>
     </div> -->
-    <span id="key-info">This is the action</span>
+    <span id="key-info"></span>
     <div id="keys-container">
       <div id="controls-container"></div>
       <div id="other-keys-container"></div>
