feat: custom cursor

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
       </p>
       <div id="progress-bar"></div>
     </section>
+    <div class="cursor"> <img src="cursor.png"></div>
+
     <canvas id="wanned"></canvas>
     <div id="light" class="hidden"></div>
     <div id="fog" class="hidden"></div>
