fix: css class renaming

--- a/index.html
+++ b/index.html
@@ -14,27 +14,11 @@
       </p>
       <div id="progress-bar"></div>
     </section>
-    <div class="cursor"> <img src="cursor.png"></div>
-
+    <div id="load"></div>
+    <div class="cursor"><img src="cursor.png" /></div>
     <canvas id="wanned"></canvas>
     <div id="light" class="hidden"></div>
     <div id="fog" class="hidden"></div>
-    <!-- <div class="controls-container">
-      <div class="control control-up">
-        <div class="arrow"></div>
-      </div>
-      <div>
-        <div class="control control-left">
-          <div class="arrow"></div>
-        </div>
-        <div class="control control-down">
-          <div class="arrow"></div>
-        </div>
-        <div class="control control-right">
-          <div class="arrow"></div>
-        </div>
-      </div>
-    </div> -->
     <span id="key-info"></span>
     <div id="keys-container">
       <div id="controls-container"></div>
