--- a/index.html
+++ b/index.html
@@ -14,7 +14,13 @@
       </p>
       <div id="progress-bar"></div>
     </section>
-
+    <div class="menu show">
+      <div class="title"><h1>WANNED</h1></div>
+      <div class="launch"><button>CONTINUER</button></div>
+      <div class="settings"><button>PARAMETRES</button></div>
+      <div class="credits"><button>CREDITS</button></div>
+      <div class="quit"><button>QUITTER</button></div>
+    </div>
     <div id="load"></div>
     <div class="cursor"><img src="cursor.png" /></div>
     <canvas id="wanned"></canvas>
