--- a/index.html
+++ b/index.html
@@ -14,12 +14,22 @@
       </p>
       <div id="progress-bar"></div>
     </section>
+
     <div class="menu show">
-      <div class="title"><h1>WANNED</h1></div>
-      <div class="launch"><button>CONTINUER</button></div>
-      <div class="settings"><button>PARAMETRES</button></div>
-      <div class="credits"><button>CREDITS</button></div>
-      <div class="quit"><button>QUITTER</button></div>
+      <div class="title"><h1>Wanned</h1></div>
+      <div class="menu-container">
+        <div class="launch"><button>Continuer</button></div>
+        <div class="credits"><button>Credits</button></div>
+        <div class="quit"><button>Quitter</button></div>
+      </div>
+
+      <div class="confirm-container">
+        <p>Etes-vous sur de vouloir quitter</p>
+        <div class="confirm-button-container">
+          <button class="yes-yes">Oui</button>
+          <button class="no-no">Non</button>
+        </div>
+      </div>
     </div>
     <div id="load"></div>
     <div class="cursor"><img src="cursor.png" /></div>
