refactor: set a font-size on button

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <div class="menu">
       <h1>Wanned</h1>
       <div class="menu-buttons">
-        <div class="menu-button launch"><button>Continuer</button></div>
-        <div class="menu-button credits"><button>Credits</button></div>
+        <div class="menu-button launch"><button>Commencer</button></div>
+        <div class="menu-button credits"><button>Crédits</button></div>
         <div class="menu-button quit"><button>Quitter</button></div>
       </div>
 
