refactor: css menu and game over

--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
       <div id="progress-bar"></div>
     </section>
 
-    <div class="menu">
+    <div class="menu screen-choices">
       <h1>Wanned</h1>
-      <div class="menu-buttons">
-        <div class="menu-button launch"><button>Commencer</button></div>
-        <div class="menu-button credits"><button>Crédits</button></div>
-        <div class="menu-button quit"><button>Quitter</button></div>
+      <div class="menu-buttons choices-buttons">
+        <div class="menu-button choice-button launch"><button>Commencer</button></div>
+        <div class="menu-button choice-button credits"><button>Crédits</button></div>
+        <div class="menu-button choice-button quit"><button>Quitter</button></div>
       </div>
 
       <div class="confirm-container hide">
