--- a/index.html
+++ b/index.html
@@ -23,6 +23,16 @@
         <div class="menu-button choice-button quit"><button>Quitter</button></div>
       </div>
 
+      <div class="credits-container hide">
+        <a href="https://github.com/baptistedph" target="_blank"><p class="name">Baptiste<span>DAUPHOUY</span></p></a>
+        <a href="https://github.com/arthur-fontaine" target="_blank"><p class="name">Arthur <span>FONTAINE</span></p></a>
+        <a href="https://github.com/tralalavico" target="_blank"><p class="name">Victor <span>HUANG</span></p></a>
+        <a href="https://github.com/Nangaim" target="_blank"><p class="name">Thierry <span>MAIGNAN</span> </p></a>
+        <a href="https://github.com/Cammyxalot" target="_blank"><p class="name">Fabien <span>RENOIR</span></p></a>
+        <a href="https://github.com/anthony-rgs" target="_blank"><p class="name">Anthony <span>RINGRESSI</span></p></a>
+        <button class="menu-button back-button">Retour</button>
+      </div>
+
       <div class="confirm-container hide">
         <p>Etes-vous sur de vouloir quitter ?</p>
         <div class="confirm-buttons">
