fix: menu css and added new favicon

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <a href="https://github.com/Nangaim" target="_blank"><p class="name">Thierry <span>MAIGNAN</span> </p></a>
         <a href="https://github.com/Cammyxalot" target="_blank"><p class="name">Fabien <span>RENOIR</span></p></a>
         <a href="https://github.com/anthony-rgs" target="_blank"><p class="name">Anthony <span>RINGRESSI</span></p></a>
-        <button class="menu-button back-button">Retour</button>
+        <button class="menu-button choice-button back-button">Retour</button>
       </div>
 
       <div class="confirm-container hide">
