fix: font and css

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     </section>
 
     <div class="menu screen-choices">
-      <h1>Wanned</h1>
+      <h1>WANNED</h1>
       <div class="menu-buttons choices-buttons">
         <div class="menu-button choice-button launch"><button>Commencer</button></div>
-        <div class="menu-button choice-button credits"><button>Crédits</button></div>
+        <div class="menu-button choice-button credits"><button>Credits</button></div>
         <div class="menu-button choice-button quit"><button>Quitter</button></div>
       </div>
 
