fix: texts & story

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <body>
     <section id="story">
       <p>
-        Il était une fois dans un Pays lointain, très lointain, une Principauté
-        appelée Quimbroisie.
+        A l’ecole du web, Hetic, a Montreuil, La Wifi ne fonctionne pas depuis
+        maintenant 3 jours.
       </p>
       <div id="progress-bar"></div>
     </section>
@@ -18,18 +18,36 @@
     <div class="menu screen-choices">
       <h1>WANNED</h1>
       <div class="menu-buttons choices-buttons">
-        <div class="menu-button choice-button launch"><button>Commencer</button></div>
-        <div class="menu-button choice-button credits"><button>Credits</button></div>
-        <div class="menu-button choice-button quit"><button>Quitter</button></div>
+        <div class="menu-button choice-button launch">
+          <button>Commencer</button>
+        </div>
+        <div class="menu-button choice-button credits">
+          <button>Credits</button>
+        </div>
+        <div class="menu-button choice-button quit">
+          <button>Quitter</button>
+        </div>
       </div>
 
       <div class="credits-container hide">
-        <a href="https://github.com/baptistedph" target="_blank"><p class="name">Baptiste<span>DAUPHOUY</span></p></a>
-        <a href="https://github.com/arthur-fontaine" target="_blank"><p class="name">Arthur <span>FONTAINE</span></p></a>
-        <a href="https://github.com/tralalavico" target="_blank"><p class="name">Victor <span>HUANG</span></p></a>
-        <a href="https://github.com/Nangaim" target="_blank"><p class="name">Thierry <span>MAIGNAN</span> </p></a>
-        <a href="https://github.com/Cammyxalot" target="_blank"><p class="name">Fabien <span>RENOIR</span></p></a>
-        <a href="https://github.com/anthony-rgs" target="_blank"><p class="name">Anthony <span>RINGRESSI</span></p></a>
+        <a href="https://github.com/baptistedph" target="_blank"
+          ><p class="name">Baptiste<span>DAUPHOUY</span></p></a
+        >
+        <a href="https://github.com/arthur-fontaine" target="_blank"
+          ><p class="name">Arthur <span>FONTAINE</span></p></a
+        >
+        <a href="https://github.com/tralalavico" target="_blank"
+          ><p class="name">Victor <span>HUANG</span></p></a
+        >
+        <a href="https://github.com/Nangaim" target="_blank"
+          ><p class="name">Thierry <span>MAIGNAN</span></p></a
+        >
+        <a href="https://github.com/Cammyxalot" target="_blank"
+          ><p class="name">Fabien <span>RENOIR</span></p></a
+        >
+        <a href="https://github.com/anthony-rgs" target="_blank"
+          ><p class="name">Anthony <span>RINGRESSI</span></p></a
+        >
         <button class="menu-button choice-button back-button">Retour</button>
       </div>
 
@@ -42,7 +60,7 @@
       </div>
     </div>
     <div id="load"></div>
-    <div class="cursor"><img src="cursor.png"  alt="cursor"/></div>
+    <div class="cursor"><img src="cursor.png" alt="cursor" /></div>
     <canvas id="wanned"></canvas>
     <div id="light" class="hidden"></div>
     <div id="fog" class="hidden"></div>
