feat: mobile not available screen

--- a/index.html
+++ b/index.html
@@ -69,6 +69,9 @@
       <div id="controls-container"></div>
       <div id="other-keys-container"></div>
     </div>
+    <div id="mobile-not-available">
+      <h2>Nous sommes navres mais Wanned n'est pas disponible sur mobile.</h2>
+    </div>
     <script src="js/index.js" type="module"></script>
   </body>
 </html>
