--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/index.css" />
-    <title>Wanned</title>
+    <title>Wanned - Le jeu de gros Wanned</title>
   </head>
   <body>
     <section id="story">
