fix: remove special characters

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       </div>
 
       <div class="confirm-container hide">
-        <p>Étes-vous sur de vouloir quitter ?</p>
+        <p>Etes-vous sur de vouloir quitter ?</p>
         <div class="confirm-buttons">
           <button class="yes">Oui</button>
           <button class="no">Non</button>
